--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>algoritmo giulia</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>História Interativa - Aventura na Floresta</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="container">
+    <h1>Bem-vindo à História Interativa!</h1>
+    <p id="historia">Você está em uma floresta escura. O que você fará?</p>
+    <div id="opcoes">
+      <button id="opcao1">Ir para a esquerda</button>
+      <button id="opcao2">Ir para a direita</button>
+    </div>
+    <button id="retornar" style="display: none;">Retornar</button>
+    <button id="reiniciar" style="display: none;">Voltar ao Início</button>
+  </div>
 
-    
-
-
-    
+  <script src="script.js"></script>
 </body>
 </html>
